--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body bgcolor="AQUA">
+    <body bgcolor="black">
        <link rel="stylesheet" href="style.css">
         <section class="head">
             <img  class="image" src="lo12.png">
